calculator/styles-alt.css
main {
    display: flex;
    justify-content: center;
}

#notepad {
    box-sizing: border-box;
    margin-top: 1rem;
    margin-left: 2rem;
    width: 15rem;
    height: 22rem;
    padding: 1rem;
    padding-bottom: 0px; /*prevents white background from bleeding through between content and border*/
    background-color: #ffecd6;
    border-right: 6px solid black;
    border-bottom: 6px solid black;
    overflow: scroll;
}

#notepad p {
    border-bottom: 1px dashed grey;
    font-family: Arial, Helvetica, sans-serif;
    position: relative;
    padding-right: 1.2rem; /*prevents text from overlapping 'x'*/
}

#notepad > p:first-child {
    font-weight: bold;
}

#notepad button {
    font-size: 1rem;
    height: 1rem;
    width: 1rem;
    background: none;
    box-shadow: none;
    padding: 0rem;
    margin: 0.5rem;
    color: brown;
    position: absolute;
    right: 0px;
    bottom: 0px;
}

#notepad span {
    cursor: default;
    background: bisque;
    border-radius: 5px;
    border: 1px solid transparent;
    margin: 0.1rem;
}

#notepad span:hover {
    border: 1px solid green;
}

#calc {
    text-align: center;
    background: grey;
    width: 18rem;
    height: 25rem;
    padding:1em;
    box-sizing: border-box;
    border-radius: 1em;
    box-shadow: 6px 7px 1px black, inset -6px -7px 3px 0px #686868, inset 2px 3px 1px #bfbfbf;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-evenly;
}

button {
    height: 3rem;
    width: 3rem;
    margin: 0.25rem 0.5rem;
    font-size: 1.5em;
    border-radius: 20%;
    border: 0px solid transparent;
    box-shadow: inset -2px -2px 0px 0px black, 2px 1px 7px 0px #616161;
    /* first gives crisp dark button inset, second a little spread */
}

#calc button:active {
    background-color: lightgrey;
    box-shadow: inset 2px 2px black, inset -1px -1px 0px #656565;
}

#neg {
    font-size: 1.2em;
}

#display {
    font-size: 2em;
    background-color: black;
    color: white;
/*    display: block;
    width: 210px;*/
    width: 90%;
    height:1.2em;
    padding: 5px;
    margin: 0.25em;
    border-radius: 10px;
    text-align: right;
    overflow:scroll;
    align-self: center;
}

.row {
    display: flex;
    width: 100%;
}

